@@ -35,9 +35,10 @@ cdef class HilbertSpace(object):
     cpdef HilbertArray diag(self, v)
     cpdef reshaped_np_matrix(self, m, input_axes=*)
     cpdef array(self, data=*, cpython.bool noinit_data=*, cpython.bool reshape=*, input_axes=*)
-    cpdef random_array(self)
-    cpdef random_unitary(self)
-    cpdef random_isometry(self)
+    cpdef HilbertArray random_array(self)
+    cpdef HilbertArray random_unitary(self)
+    cpdef HilbertArray random_isometry(self)
+    cpdef HilbertArray random_density(self)
     cpdef HilbertArray eye(self)
     cpdef basis_vec(self, idx)
     cpdef basis(self)
